--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 							
 							<button class="accordion">3. Can I redistribute this template as a ZIP file?</button>
 							<div class="panel">
-							  <p>Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a href="https://templatemo.com/contact">contact TemplateMo</a> for additional permissions about our templates. Thank you.</p>
+							  <p>Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a href="https://    .com/contact">contact     </a> for additional permissions about our templates. Thank you.</p>
 							</div>
 							
 							<button class="accordion">4. Ut ac erat sit amet neque efficitur faucibus et in lectus?</button>
