--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           <p class="cont centered">
             This is about page of Our Store template. You can modify and use
             this HTML template for your website. Total 3 HTML pages included in
-            this template. Header image has a parallax effect.
+            this template. 
           </p>
         </header>
 
