replace article element

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Mohanad Izz hayek
         <div class="contain gallery">
           <!-- gallery page 1 -->
           <div id="gallery-page-pizza" class="gallery-page">
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/01.jpg"
@@ -101,8 +101,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$45 / $55</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/02.jpg"
@@ -118,8 +118,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$65 / $70</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/03.jpg"
@@ -135,8 +135,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$30.50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/04.jpg"
@@ -152,8 +152,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$25.50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/05.jpg"
@@ -169,8 +169,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$80.25</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/06.jpg"
@@ -186,8 +186,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$20 / $40 / $60</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/07.jpg"
@@ -203,8 +203,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$94</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/08.jpg"
@@ -220,13 +220,13 @@ Mohanad Izz hayek
                   <p class="gallery-price">$15</p>
                 </figcaption>
               </figure>
-            </article>
+            </div>
           </div>
           <!-- gallery page 1 -->
 
           <!-- gallery page 2 -->
           <div id="gallery-page-salad" class="gallery-page hidden">
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/04.jpg"
@@ -242,8 +242,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$25</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/03.jpg"
@@ -259,8 +259,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$30</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/05.jpg"
@@ -276,8 +276,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$45</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/01.jpg"
@@ -293,8 +293,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/08.jpg"
@@ -310,8 +310,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$55 / $60</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/07.jpg"
@@ -327,13 +327,13 @@ Mohanad Izz hayek
                   <p class="gallery-price">$75</p>
                 </figcaption>
               </figure>
-            </article>
+            </div>
           </div>
           <!-- gallery page 2 -->
 
           <!-- gallery page 3 -->
           <div id="gallery-page-noodle" class="gallery-page hidden">
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/08.jpg"
@@ -349,8 +349,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$12.50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/07.jpg"
@@ -366,8 +366,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$15.50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/06.jpg"
@@ -383,8 +383,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$20.50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/05.jpg"
@@ -400,8 +400,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$30.25</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/04.jpg"
@@ -417,8 +417,8 @@ Mohanad Izz hayek
                   <p class="gallery-price">$35.50</p>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec3 sec4 smallsec6 cont gallery-item">
+            </div>
+            <div class="sec3 sec4 smallsec6 cont gallery-item">
               <figure>
                 <img
                   src="img/gallery/03.jpg"
@@ -434,7 +434,7 @@ Mohanad Izz hayek
                   <p class="gallery-price">$40.50</p>
                 </figcaption>
               </figure>
-            </article>
+            </div>
           </div>
           <!-- gallery page 3 -->
         </div>
