--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
         <div class="contrainer tm-persons">
           <div class="contain">
-            <article class="sec6">
+            <div class="sec6">
               <figure class="p">
                 <img
                   src="img/about-01.jpg"
@@ -84,8 +84,8 @@
                   </div>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec6">
+            </div>
+            <div class="sec6">
               <figure class="p">
                 <img
                   src="img/about-02.jpg"
@@ -109,8 +109,8 @@
                   </div>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec6">
+            </div>
+            <div class="sec6">
               <figure class="p">
                 <img
                   src="img/about-03.jpg"
@@ -135,8 +135,8 @@
                   </div>
                 </figcaption>
               </figure>
-            </article>
-            <article class="sec6">
+            </div>
+            <div class="sec6">
               <figure class="p">
                 <img
                   src="img/about-04.jpg"
@@ -166,7 +166,7 @@
                   </div>
                 </figcaption>
               </figure>
-            </article>
+            </div>
           </div>
         </div>
         <div class="contrainer">
